fixed white right bar on mobile safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,11 +143,14 @@ a:active {
 
 }
 
+html, body {
+	background-image: url('http://cdn.mysitemyway.com/etc-mysitemyway/webtreats/assets/posts/857/full/tileable-classic-nebula-space-patterns-3.jpg');
+}
 
 .container {
 	padding-top: 15px;
 	min-height: 100%;
-	background-image: url('http://cdn.mysitemyway.com/etc-mysitemyway/webtreats/assets/posts/857/full/tileable-classic-nebula-space-patterns-3.jpg');
+	/*background-image: url('http://cdn.mysitemyway.com/etc-mysitemyway/webtreats/assets/posts/857/full/tileable-classic-nebula-space-patterns-3.jpg');*/
 }
 	
 h2 {
